Update link to 'Back to Home Page' in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -278,7 +278,7 @@ button:hover {
     </form>
   </section>
   <button>
-    <a href="haico.html">Back to Home Page </a>
+    <a href="index.html">Back to Home Page </a>
   </button>
 </body>
 
